--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="CSS/fonts.css" />
     <link rel="stylesheet" href="CSS/style-btn.css" />
     <link rel="stylesheet" href="CSS/sharedStyles.css" />
-    <script
-      src="https://kit.fontawesome.com/b2114fb681.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="CSS/Responsive.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,7 +26,7 @@
             <li><a href="#acerca-de-mi">Acerca de mí</a></li>
             <li><a href="#contacto">Contacto</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
-            <li><a href="#Proyectos">Proyectos</a></li>
+            <li><a href="#proyectos">Proyectos</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +64,7 @@
             Ricardo Morales Avilés. Me gusta la programacion, acertijos, musica
             en especial la musica lofi, mi pasatiempos son jugar ajedrez,
             videojuegos como Minecraft y Hollow Knight y ver series como "El
-            Mentalista" entre otras
+            Mentalista" entre otras.
           </p>
           <a
             href="Resource/Mi Curriculum vitae.pdf"
@@ -99,6 +96,9 @@
         <div class="skill-row">
           <div>
             <img src="Img/Csharp.jpg" alt="C#" class="remove-bg" />
+          </div>
+          <div>
+            <img src="Img/Logo python.png" alt="C#" class="remove-bg" />
           </div>
         </div>
       </div>
@@ -153,12 +153,14 @@
             <div class="card-body">
               <h4 class="card-title">Mi portafolio</h4>
               <div class="btn-group" role="group" aria-label="Basic example">
-                <a href="" target="_blank"
+                <a href="#"
                   ><button type="button" class="btn-style-2 btn-group-style-1">
                     Sitio web
                   </button></a
                 >
-                <a href="" target="_blank"
+                <a
+                  href="https://github.com/JasonTrana/Portafolio-JT"
+                  target="_blank"
                   ><button type="button" class="btn-style-2 btn-group-style-3">
                     GitHub
                   </button></a
@@ -184,7 +186,9 @@
                     Sitio web
                   </button></a
                 >
-                <a href="" target="_blank"
+                <a
+                  href="https://github.com/JasonTrana/Sitioweb-sobre-minecraft"
+                  target="_blank"
                   ><button type="button" class="btn-style-2 btn-group-style-3">
                     GitHub
                   </button></a
@@ -203,17 +207,10 @@
             <div class="card-body">
               <h4 class="card-title">Gestor de biblioteca</h4>
               <div class="btn-group" role="group" aria-label="Basic example">
-                <a href="" target="_blank"
-                  ><button type="button" class="btn-style-2 btn-group-style-1">
-                    Sitio web
-                  </button></a
-                >
                 <a
                   href="https://github.com/JasonTrana/RepositorioBibliotecaVirtual"
                   target="_blank"
-                  ><button type="button" class="btn-style-2 btn-group-style-3">
-                    GitHub
-                  </button></a
+                  ><button type="button" class="btn-style-1">GitHub</button></a
                 >
               </div>
             </div>
@@ -265,7 +262,7 @@
 
     <footer>
       <div class="footer-container">
-        <p>&copy; Todos los derechos reservasdos. Jason Orlando Traña Peña</p>
+        <p>&copy; Copyright. Todos los derechos reservasdos.</p>
       </div>
     </footer>
   </body>
